--- a/classy_attire/package.json
+++ b/classy_attire/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-fa-icon": "^0.1.4",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
